refactor: new section

--- a/index.html
+++ b/index.html
@@ -20,33 +20,43 @@
 </head>
 <body>
     <div class="container">
-    <!--Header-->
-        <header class="header">
-            <a href="#" class="nav-menu-button">
-                <i class="uil uil-bars"></i>
-            </a>
-            <a href="#" class="name">
-                Carlos Eduardo
-            </a>
-            <ul class="menu-options">
-                <li class="menu-option-button">
-                    About
-                </li>
-                <li class="menu-option-button">
-                    Projects
-                </li>
-                <li class="menu-option-button">
-                    Contact
-                </li>
-            </ul>
-        </header>
-    <!--Main-->
-        <div class="main_container">
-            <a id="dev-name">Desenvolvedor<br>Front-End</a>
-        </div>
-    <!--Footer-->
-    <!--Script-->
-    </div>
+        <!--Header-->
+        <section class="sec-header">
+            <header class="header">
+                <a href="#" class="nav-menu-button">
+                    <i class="uil uil-bars"></i>
+                </a>
+                <a href="#" class="name">
+                    Carlos Eduardo
+                </a>
+                <ul class="menu-options">
+                    <li class="menu-option-button">
+                        About
+                    </li>
+                    <li class="menu-option-button">
+                        Projects
+                    </li>
+                    <li class="menu-option-button">
+                        Contact
+                    </li>
+                </ul>
+            </header>
+        </section>
+        <!--Main-->
+        <section class="sec_main">
+            <div class="main">
+                <a id="dev-name">Desenvolvedor<br>Front-End</a>
+            </div>
+        </section>
+        <section class="sec-about">
+            <div class="about">
+                <h1 class="title">About</h1>
+                <p>Oi, me chamo Carlos Eduardo. Sou desenvolvedor front-end focado na stack do javascript e apaixonado por tecnologia. Já desenvolvi disversos projetos Web e Mobile que estão em produção.</p>
+            </div>
+        </section>
+        <!--Footer-->
+    </div>    
+        <!--Script-->
     <script src="script.js"></script>
 </body>
 </html>
