refactor: new layout

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    
     <!--Icons-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
    
@@ -21,37 +21,27 @@
 <body>
     <div class="container">
         <!--Header-->
-        <section class="sec-header">
-            <header class="header">
-                <a href="#" class="nav-menu-button">
-                    <i class="uil uil-bars"></i>
-                </a>
-                <a href="#" class="name">
+        <header>
+            <div class="logo">
+                C
+            </div>
+            <div class="menu">
+                <i class="uil uil-align-center-alt"></i>
+            </div>
+        </header>
+        <!--Main-->
+        <section class="sec-hero">
+            <div class="title">
+                <a href="#" class="dev-name" alt="Carlos Eduardo">
                     Carlos Eduardo
                 </a>
-                <ul class="menu-options">
-                    <li class="menu-option-button">
-                        About
-                    </li>
-                    <li class="menu-option-button">
-                        Projects
-                    </li>
-                    <li class="menu-option-button">
-                        Contact
-                    </li>
-                </ul>
-            </header>
-        </section>
-        <!--Main-->
-        <section class="sec_main">
-            <div class="main">
-                <a id="dev-name">Desenvolvedor<br>Front-End</a>
+                <h1 class="dev-description" alt="Desenvolvedor Front-end">
+                    Front-end Developer<br>from Brasil
+                </h1>
             </div>
-        </section>
-        <section class="sec-about">
-            <div class="about">
-                <h1 class="title">About</h1>
-                <p>Oi, me chamo Carlos Eduardo. Sou desenvolvedor front-end focado na stack do javascript e apaixonado por tecnologia. Já desenvolvi disversos projetos Web e Mobile que estão em produção.</p>
+            <div class="buttons_container">
+                <button class="color">View My Github</button>
+                <button class="">My Projects</button>
             </div>
         </section>
         <!--Footer-->
