--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         </header>
         <!--Main-->
         <section class="sec-hero">
+            <div class="menu-container">
+                <a href="#" class="menu-button">Home</a>
+                <a href="#" class="menu-button">About</a>
+                <a href="#" class="menu-button">Contact</a>
+            </div>
             <div class="title">
                 <a href="#" class="dev-name" alt="Carlos Eduardo">
                     Carlos Eduardo
