feat: section about

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!--Header-->
         <header>
             <div class="logo">
-                C
+                CE
             </div>
             <div class="menu">
                 <i class="uil uil-align-center-alt"></i>
@@ -32,8 +32,8 @@
         <!--Main-->
         <section class="sec-hero">
             <div class="menu-container">
-                <a href="#" class="menu-button">Home</a>
-                <a href="#" class="menu-button">About</a>
+                <a href="#sec-hero" class="menu-button">Home</a>
+                <a href="#about" class="menu-button">About</a>
                 <a href="#" class="menu-button">Contact</a>
             </div>
             <div class="title">
@@ -47,6 +47,13 @@
             <div class="buttons_container">
                 <button class="color">View My Github</button>
                 <button class="">My Projects</button>
+            </div>
+        </section>
+        <section class="about" id="about">
+            <div class="about-container">
+                <p>
+                    Me chamo Carlos Eduardo, sou desenvolvedor front-end e apaixonado por tecnologia. Ja produzi diversos tipos de aplicações. Confira minhas redes sociais.
+                </p>
             </div>
         </section>
         <!--Footer-->
