feat: menu close when fired

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             </div>
         </header>
         <!--Main-->
-        <section class="sec-hero">
+        <section class="sec-hero" id="sec-hero">
             <div class="menu-container">
-                <a href="#sec-hero" class="menu-button">Home</a>
-                <a href="#about" class="menu-button">About</a>
-                <a href="#" class="menu-button">Contact</a>
+                <a id="home_button"  href="#sec-hero" class="menu-button">Home</a>
+                <a id="about_button" href="#sec-about" class="menu-button">About</a>
+                <a id="contact_button"  href="#sec-contact" class="menu-button">Contact</a>
             </div>
             <div class="title">
                 <a href="#" class="dev-name" alt="Carlos Eduardo">
@@ -49,7 +49,7 @@
                 <button class="">My Projects</button>
             </div>
         </section>
-        <section class="about" id="about">
+        <section class="about" id="sec-about">
             <div class="about-container">
                 <p>
                     Me chamo Carlos Eduardo, sou desenvolvedor front-end e apaixonado por tecnologia. Ja produzi diversos tipos de aplicações. Confira minhas redes sociais.
