style: label text

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section class="about" id="sec-about">
             <div class="about-container">
                 <p>
-                    Me chamo Carlos Eduardo, sou desenvolvedor front-end e apaixonado por tecnologia. Ja produzi diversos tipos de aplicações. Confira minhas redes sociais.
+                    Me chamo Carlos Eduardo, sou desenvolvedor front-end e apaixonado por tecnologia. Já produzi diversos tipos de aplicações. Confira minhas redes sociais.
                 </p>
             </div>
         </section>
