--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <!--Icons-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-   
+
     <title>Portfolio</title>
 </head>
 <body>
@@ -35,6 +35,7 @@
                 <div class="menu-container">
                     <a id="home_button"  href="#sec-hero" class="menu-button">Home</a>
                     <a id="about_button" href="#sec-about" class="menu-button">About</a>
+                    <a id="contact_button"  href="#sec-projects" class="menu-button">Projects</a>
                     <a id="contact_button"  href="#sec-contact" class="menu-button">Contact</a>
                 </div>
                 <div class="title">
@@ -58,6 +59,22 @@
                 </p>
             </div>
         </section>
+        <section class="sec-projects" id="sec-projects">
+            <div class="banner-container">
+                <img src="./assets/projects/findmovies1.png" alt="FindMoviesPrintScreen" class="banner1-image">
+                <img src="./assets/projects/findmovies2.png" alt="FindMoviesPrintScreen" class="banner1-image">
+                <img src="./assets/projects/findmovies3.png" alt="FindMoviesPrintScreen" class="banner1-image">
+            </div>
+            <a href="">FindMovies</a>
+            <div class="banner-container">
+                <img src="" alt="" class="banner-image">
+                <a href=""></a>
+            </div>
+            <div class="banner-container">
+                <img src="" alt="" class="banner-image">
+                <a href=""></a>
+            </div>
+        </section>  
         <section class="sec-contact" id="sec-contact">
             <div class="contact-container">
                 <a rel="noopener noreferrer" target="_blank" href="https://www.linkedin.com/in/carlos-eduardo-101486126/">
