fix: add id to banner containre

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </section>
         <section class="sec-projects" id="sec-projects">
-            <div class="banner-container">
+            <div class="banner-container" id="findMovie-container">
                 <img src="./assets/projects/findmovies1.png" alt="FindMoviesPrintScreen" class="banner1-image">
                 <img src="./assets/projects/findmovies2.png" alt="FindMoviesPrintScreen" class="banner1-image">
                 <img src="./assets/projects/findmovies3.png" alt="FindMoviesPrintScreen" class="banner1-image">
