refactor: class name banner of mobile image

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         </section>
         <section class="sec-projects" id="sec-projects">
             <div class="banner-container" id="findMovie-container">
-                <img src="./assets/projects/findmovies1.png" alt="FindMoviesPrintScreen" class="banner1-image">
-                <img src="./assets/projects/findmovies2.png" alt="FindMoviesPrintScreen" class="banner1-image">
-                <img src="./assets/projects/findmovies3.png" alt="FindMoviesPrintScreen" class="banner1-image">
+                <img src="./assets/projects/findmovies1.png" alt="FindMoviesPrintScreen" class="mobile-image">
+                <img src="./assets/projects/findmovies2.png" alt="FindMoviesPrintScreen" class="mobile-image">
+                <img src="./assets/projects/findmovies3.png" alt="FindMoviesPrintScreen" class="mobile-image">
             </div>
             <a href="">FindMovies</a>
             <div class="banner-container">
