feat: add new project

--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
             </div>
         </section>
         <section class="sec-projects" id="sec-projects">
-            <div class="banner-container" id="findMovie-container">
-                <img src="./assets/projects/findmovies1.png" alt="FindMoviesPrintScreen" class="mobile-image">
+            <span id="projects-title">Projects</span>
+            <a href="">FindMovies</a>
+            <div class="bannerMobile-container" id="findMovie-container">
+                <img src="./assets/projects/findmovies1.png" alt="FindMoviesPrintScreen" class="mobile-image image-selected" >
                 <img src="./assets/projects/findmovies2.png" alt="FindMoviesPrintScreen" class="mobile-image">
                 <img src="./assets/projects/findmovies3.png" alt="FindMoviesPrintScreen" class="mobile-image">
             </div>
-            <a href="">FindMovies</a>
-            <div class="banner-container">
-                <img src="" alt="" class="banner-image">
-                <a href=""></a>
-            </div>
-            <div class="banner-container">
-                <img src="" alt="" class="banner-image">
-                <a href=""></a>
+            <a href="">Plant Manager</a>
+            <div id="plantmanager-container">
+                <img src="./assets/projects/plantmanager1.gif" alt="Plant Manager PrintScreen" >
+                <img src="./assets/projects/plantmanager2.gif" alt="Plant Manager PrintScreen" >
+                <img src="./assets/projects/plantmanager3.gif" alt="Plant Manager PrintScreen" >
+                <img src="./assets/projects/plantmanager4.gif" alt="Plant Manager PrintScreen" >
             </div>
         </section>  
         <section class="sec-contact" id="sec-contact">
