fix: add anchor html into buttons

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     </h1>
                 </div>
                 <div class="buttons_container">
-                    <button class="color">View My Github</button>
-                    <button class="">My Projects</button>
+                    <a rel="noopener noreferrer" target="_blank" href="https://github.com/eduard1dev" class="button color">View My Github</a>
+                    <a href="#sec-projects" class="button">My Projects</a>
                 </div>
             </div>
         </section>
